<resources>
    <string name="app_name">Ericsson Client</string>
    <string name="action_settings">Settings</string>
    <string name="title_grad_year">Graduation Year</string>
    <string name="title_email">Email</string>
    <string name="title_name">Name</string>
    <string name="title_phone">Phone</string>
    <string name="title_university">University</string>
    <string name="title_program">Program</string>
    <string name="title_finish">Finish</string>
    <string name="title_scan_qrcode">Scan QRCode</string>
    <string name="title_person_information">Personal Infomation</string>
    <string name="title_interviewer_id">Interviewer ID</string>
    <string name="title_send_info">Send Info</string>
    <string name="title_reset_profile">Reset Profile</string>
</resources>
